php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #43651 is_callable() with one or more nonconsecutive colons crashes in CLI
Submitted: 2007-12-21 11:17 UTC Modified: 2007-12-25 10:59 UTC
From: kubo at iteman dot jp Assigned: dmitry (profile)
Status: Closed Package: Reproducible crash
PHP Version: 5.3CVS-2007-12-21 (snap) OS: Windows XP SP2
Private report: No CVE-ID: None
 [2007-12-21 11:17 UTC] kubo at iteman dot jp
Description:
------------
is_callable() with any string containing one or more nonconsecutive colons in second byte or larger (e.g. 'C:', 'C : :', not 'C ::') like Windows-style paths crashes in CLI.

Reproduce code:
---------------
var_dump(is_callable('C:'));

Expected result:
----------------
bool(false)

Actual result:
--------------
No display. A Windows Error Reporting dialog box appears.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-12-22 10:15 UTC] johannes@php.net
Dmitry can you please check that I didn't miss a thing in this patch:

http://schlueters.de/~johannes/php/bug43651.diff
http://schlueters.de/~johannes/php/bug43651.phpt
 [2007-12-25 10:59 UTC] dmitry@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Jul 16 04:00:01 2026 UTC