Fixed bug #43651 (is_callable() with one or more nonconsecutive colons crashes)